# vibe-proving-math

./: .dockerignore  .gitignore  API端到端功能测试报告.md  API配置问题修复报告.md  BUG_FIX_SUMMARY.md  CONTRIBUTING.md  Dockerfile  E2E测试分析报告_v2.md  E2E测试执行总结_最终版.md  E2E测试报告.md  E2E测试最终报告.md  E2E测试最终报告_完整版.md  E2E测试深度改进报告-完整AI验证版.md  E2E测试驱动代码改进报告.md  FINAL_TEST_SUMMARY.md  OPENSOURCE_CHECKLIST.md  PRODUCT_INTRO.md  PRODUCT_INTRO.zh.md  README.md  README.zh.md  TEST_REPORT.md  docker-compose.yml  docker-start.bat  docker-start.sh  e2e_test_manual.md  fix_plan.md  lake-manifest.json  lakefile.toml  manual_test.md  run-e2e-tests.bat  run-e2e-tests.sh  run_debug.sh  test_llm_debug.py  test_llm_proof.py  test_llm_simple.py  代码优化方案_E2E测试结果.md  复杂场景测试计划.md  完整用户场景E2E测试报告.md  现代化E2E测试策略完整报告.md  项目架构图.md  (+1 more)
app/: config.example.toml  pyproject.toml  requirements.txt
app/api/: server.py
app/core/: aristotle_client.py  config.py  knowledge_base.py  llm.py  logging_setup.py  matlas_search.py  mineru_client.py  nanonets_client.py  pdf_fix.py  text_sanitize.py  theorem_search.py  user_store.py
app/modes/formalization/: external_search.py  orchestrator.py  (+3 more)
app/skills/: counterexamples.py  direct_proving.py  prerequisite_map.py  search_theorems.py  subgoal_decomp.py  verify_sequential.py
app/tests/: test_config_api.py  test_formalize_api.py  test_formalize_orchestrator.py  test_frontend_api_integration.py  test_frontend_config_flow.py  test_frontend_ui_rendering.py  test_i18n_comprehensive.py  test_latex_rendering_comprehensive.py  test_phase3_learning.py
app/ui/: app.js  index.html  style.css
(+29 files in other folders)
