[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vibe_proving"
version = "0.1.0"
description = "数学工作者的推理伙伴 —— 开源、低成本、双模式（学习模式 + 研究模式）"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "vibe_proving Contributors" }]
keywords = ["mathematics", "proof", "AI", "LLM", "theorem-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
paper = [
    "PyMuPDF>=1.24.0",
    "plasTeX>=2.5",
    "arxiv>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/your-org/vibe_proving"
Repository = "https://github.com/your-org/vibe_proving"
